pkg/agentgateway/plugins/testdata/trafficpolicy/global-rl-with-uri.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: http
  namespace: default
spec:
  targetRefs:
    - kind: Gateway
      name: test
      group: gateway.networking.k8s.io
  traffic:
    rateLimit:
      global:
        uri: http://rl-svc.example.com:4444
        domain: "api-gateway"
        descriptors:
          - entries:
              - name: user-agent
                expression: 'request.headers["user-agent"]'
---
# Output
output:
- Backend:
    key: default/internal-bd63dc4f4187f910
    name:
      name: internal-bd63dc4f4187f910
      namespace: default
    static:
      host: rl-svc.example.com
      port: 4444
  Policy:
    key: traffic/default/http:rl-global:default/test
    name:
      kind: AgentgatewayPolicy
      name: http
      namespace: default
    target:
      gateway:
        name: test
        namespace: default
    traffic:
      remoteRateLimit:
        descriptors:
        - entries:
          - key: user-agent
            value: request.headers["user-agent"]
        domain: api-gateway
        target:
          backend: default/internal-bd63dc4f4187f910
status:
  ancestors:
  - ancestorRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: test
      namespace: default
    conditions:
    - lastTransitionTime: fake
      message: Policy accepted
      reason: Valid
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: Attached to all targets
      reason: Attached
      status: "True"
      type: Attached
    controllerName: agentgateway.dev/agentgateway
