pkg/agentgateway/plugins/testdata/trafficpolicy/header-modifier.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: agw
  namespace: default
spec:
  targetRefs:
  - kind: Gateway
    name: test
    group: gateway.networking.k8s.io
  traffic:
    headerModifiers:
      request:
        add:
        - name: add-req-header
          value: bar,baz
        set:
        - name: set-req-header
          value: foo
        remove:
        - remove-req-header
      response:
        add:
        - name: add-res-header
          value: bar,baz
        set:
        - name: set-res-header
          value: foo
        remove:
        - server
---
# Output
output:
- Policy:
    name: traffic/default/agw:header-modifier:default/test
    target:
      gateway: default/test
    traffic:
      requestHeaderModifier:
        add:
        - name: add-req-header
          value: bar,baz
        remove:
        - remove-req-header
        set:
        - name: set-req-header
          value: foo
- Policy:
    name: traffic/default/agw:header-modifier:default/test
    target:
      gateway: default/test
    traffic:
      responseHeaderModifier:
        add:
        - name: add-res-header
          value: bar,baz
        remove:
        - server
        set:
        - name: set-res-header
          value: foo
status:
  ancestors:
  - ancestorRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: test
      namespace: default
    conditions:
    - lastTransitionTime: fake
      message: Policy accepted
      reason: Valid
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: Attached to all targets
      reason: Attached
      status: "True"
      type: Attached
    controllerName: kgateway.dev/agentgateway
