pkg/agentgateway/plugins/testdata/trafficpolicy/mcp-auth.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: mcp-backend-static
  namespace: default
spec:
  mcp:
    targets:
      - name: mcp-target
        static:
          host: mcp-app.default.svc.cluster.local
          port: 8000
          protocol: StreamableHTTP
          path: override-sse
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: keycloak-mcp-authn-policy
  namespace: default
spec:
  targetRefs:
    - name: mcp-backend-static
      kind: AgentgatewayBackend
      group: agentgateway.dev
  backend:
    mcp:
      authentication:
        issuer: http://keycloak:7080/realms/mcp
        jwks:
          jwksPath: realms/mcp/protocol/openid-connect/certs
          backendRef:
            group: ""
            kind: Service
            name: keycloak
            port: 7080
        audiences:
          - "account"
        provider: Keycloak
        resourceMetadata:
          resource: http://mcp-website-fetcher.default.svc.cluster.local/mcp
          scopesSupported: '["tools/call/fetch"]'
          bearerMethodsSupported: '["header"]'
          resourceDocumentation: http://mcp-website-fetcher.default.svc.cluster.local/docs
          resourcePolicyUri: http://mcp-website-fetcher.default.svc.cluster.local/policies
---
apiVersion: v1
data:
  jwks-store: '{"http://keycloak.default.svc.cluster.local:7080/realms/mcp/protocol/openid-connect/certs":"{\"keys\":[{\"use\":\"enc\",\"kty\":\"RSA\",\"kid\":\"-VsQtem_T9-RdhVcv9hK3qVGqtrpLil5z1-ivX2StZY\",\"alg\":\"RSA-OAEP\",\"n\":\"klR5MxpPeHVd8cCtYvEL-9lcsv8gTaR_4MM053_XIhzJtq8kV3TY8Co35LD926QzCNam0qhZzckGn0W3S9hPkomNtXsbEoe5-kqY5BpfolUMj9ZfACz04QRqQIdecUGoHh4hAV07-UqHVUEwCVQNjVGZMzHnS05xxeVdCJPc-1KJrw_AVV6tKKSq0Q6TUWs6BFsXCd5zXQEyYPOmSflAmB7-xogWgdBoSplOkiiiGXeJu2_lW4Ob4C5n-cYDjo5-LB6YU3JL [...]
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/component: jwks-store
  name: jwks-store-1ede70d6c818eff6121a0625c628681a
  namespace: kgateway-system
