pkg/agentgateway/plugins/testdata/trafficpolicy/retry-invalid-attempts-exceeds-i32.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: agw
  namespace: default
spec:
  targetRefs:
  - kind: Gateway
    name: test
    group: gateway.networking.k8s.io
  traffic:
    retry:
      attempts: 2147483648
---
# Output
output: null
status:
  ancestors:
  - ancestorRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: test
      namespace: default
    conditions:
    - lastTransitionTime: fake
      message: failed to parse retry attemptes should be positive int32 (2147483648)
      reason: Invalid
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: Policy is not attached due to invalid status
      reason: Pending
      status: "False"
      type: Attached
    controllerName: agentgateway.dev/agentgateway
