pkg/agentgateway/plugins/testdata/trafficpolicy/retry-invalid-attempts-negative.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: agw
  namespace: default
spec:
  targetRefs:
  - kind: Gateway
    name: test
    group: gateway.networking.k8s.io
  traffic:
    retry:
      attempts: -4
---
# Output
output: null
status:
  ancestors:
  - ancestorRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: test
      namespace: default
    conditions:
    - lastTransitionTime: fake
      message: failed to parse retry attemptes should be positive int32 (-4)
      reason: Invalid
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: Policy is not attached due to invalid status
      reason: Pending
      status: "False"
      type: Attached
    controllerName: kgateway.dev/agentgateway
