pkg/agentgateway/plugins/testdata/trafficpolicy/retry.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: agw
  namespace: default
spec:
  targetRefs:
  - kind: Gateway
    name: test
    group: gateway.networking.k8s.io
  traffic:
    retry:
      attempts: 3
      statusCodes:
      - 500
      - 502
      - 503
      - 504
      backoffBaseInterval: 10s
---
# Output
output:
- Policy:
    name: traffic/default/agw:retry:default/test
    target:
      gateway: default/test
    traffic:
      retry:
        attempts: 3
        backoff: 10s
        retryStatusCodes:
        - 500
        - 502
        - 503
        - 504
status:
  ancestors:
  - ancestorRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: test
      namespace: default
    conditions:
    - lastTransitionTime: fake
      message: Policy accepted
      reason: Valid
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: Attached to all targets
      reason: Attached
      status: "True"
      type: Attached
    controllerName: kgateway.dev/agentgateway
